--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   connectivity_plus: ^6.0.5
   go_router: ^14.2.9
   dio: ^5.7.0
+  hive_flutter: ^1.1.0
   shared_preferences: ^2.3.2
 
 dev_dependencies:
