feat(ui): add error handling with OKToast
- Integrated OKToast to display error messages in the UI
- Added reusable method for showing toast messages in the 'ui' layer
- Applied toast for error handling in the MoviesController to notify the user about network or cache failures

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   dio: ^5.7.0
   hive_flutter: ^1.1.0
   shared_preferences: ^2.3.2
+  oktoast: ^3.4.0
 
 dev_dependencies:
   flutter_test:
