--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,18 +14,23 @@ dependencies:
   get_it: ^8.0.0
   either_dart: ^1.0.0
   connectivity_plus: ^6.0.5
-  go_router: ^14.2.9
   dio: ^5.7.0
-  hive_flutter: ^1.1.0
   shared_preferences: ^2.3.2
   oktoast: ^3.4.0
+  cached_network_image: ^3.4.1
+  auto_size_text: ^3.0.0
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  mockito: ^5.4.4
+  build_runner: ^2.4.13
 
   flutter_lints: ^4.0.0
 
 flutter:
-
   uses-material-design: true
+  assets:
+    - assets/
+    - assets/images/
