--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   cached_network_image: ^3.4.1
   auto_size_text: ^3.0.0
   shimmer: ^3.0.0
+  modal_progress_hud_nsn: ^0.5.0
 
 dev_dependencies:
   flutter_test:
